# DiplomadoProyectosFinales

./: Readme.MD  SQL_Class.ipynb  pyproject.toml
Código/: Carga_SECOP.ipynb  CargarData.py  Mapa.py  Primer_cuaderno.ipynb  Secuestros.db  Taller_Secuestros.ipynb  TransformacionData.py  VisualizacionData.py
Código/.ipynb_checkpoints/: App-checkpoint.py  Carga_SECOP-checkpoint.ipynb  TallerDimensionales-checkpoint.ipynb
Código/datos_secop/: data_offset_19500000.csv  data_offset_19500000B2.csv
Datos/: Poblacion2005-2035.xlsx
