[project]
name = "código"
version = "0.0.1"
description = "Primer proyecto del diplomado"
authors = [
    {name = "Laura",email = "lauratorresgiraldo@usantotomas.edu.co"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "streamlit (>=1.46.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.25.0,<0.26.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "fiona (>=1.10.1,<2.0.0)",
    "sodapy (>=2.2.0,<3.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "kernel (>=0.8.2,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"





